k8s-LEF/deployments-lef.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lexon
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: lexon
    spec:
      containers:
      - name: lexon
        image: elefebvreoncotainers/lexon.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lexonmysql
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: lexonmysql
    spec:
      containers:
      - name: lexonmysql
        image: elefebvreoncotainers/lexonmysql.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: accounts
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: accounts
    spec:
      containers:
      - name: accounts
        image: elefebvreoncotainers/accounts.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webportalclient
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webportalclient
    spec:
      containers:
      - name: webportalclient
        image: elefebvreoncotainers/webportalclient
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webgoogleclient
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webgoogleclient
    spec:
      containers:
      - name: webgoogleclient
        image: elefebvreoncotainers/webgoogleclient
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webofficeclient
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webofficeclient
    spec:
      containers:
      - name: webofficeclient
        image: elefebvreoncotainers/webofficeclient
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weblexonclient
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: weblexonclient
    spec:
      containers:
      - name: weblexonclient
        image: elefebvreoncotainers/weblexonclient
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webloginaddonlexon
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webloginaddonlexon
    spec:
      containers:
      - name: webloginaddonlexon
        image: elefebvreoncotainers/webloginaddonlexon
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webimapclient
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webimapclient
    spec:
      containers:
      - name: webimapclient
        image: elefebvreoncotainers/webimapclient
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webstatus
spec:
  paused: true
  template:
    metadata:
      labels:
        app: elefebvre
        component: webstatus
    spec:
      containers:
      - name: webstatus
        image: elefebvreoncotainers/webstatuslef
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-key
---
