k8s-LEF/services-lef.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: lexon
  name: lexon
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: lexon
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: accounts
  name: accounts
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: accounts
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: lexonmysql
  name: lexonmysql
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: lexonmysql
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: webstatus
  name: webstatus
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: webstatus
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: userutils
  name: userutils
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: userutils
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elefebvre
    component: centinela
  name: centinela
spec:
  ports:
  - port: 80
  selector:
    app: elefebvre
    component: centinela

# se necesita poner la aplucacion web?
